--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="body">
+        
+    </div>
     <div class="flex">
         <div class="id1 card">
             <img src="./img/1.jpg">
