[ADD]  Slider function security

--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
             <img src="./img/4.jpg">
             <div>내용4</div>
         </div> 
-        <div class="id5 card">
+        <div class="id5 card width">
             <img src="./img/5.jpg">
             <div>내용5</div>
         </div> 
+        <div class="id6 card width">
+            <img src="./img/5.jpg">
+            <div>내용6</div>
+        </div>
     </div>
     <script src="portfolio.js"></script>
 </body>
