[FIX] Slider function

--- a/index.html
+++ b/index.html
@@ -28,13 +28,25 @@
             <img src="./img/4.jpg">
             <div>내용4</div>
         </div> 
-        <div class="id5 card width">
+        <div class="id5 card">
             <img src="./img/5.jpg">
             <div>내용5</div>
         </div> 
         <div class="id6 card width">
             <img src="./img/5.jpg">
             <div>내용6</div>
+        </div>
+        <div class="id7 card width">
+            <img src="./img/5.jpg">
+            <div>내용7</div>
+        </div>
+        <div class="id8 card width">
+            <img src="./img/5.jpg">
+            <div>내용8</div>
+        </div>
+        <div class="id9 card width">
+            <img src="./img/5.jpg">
+            <div>내용9</div>
         </div>
     </div>
     <script src="portfolio.js"></script>
