--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="body">
     </div>
     <div class="flex">
-        <div class="id1 card">
+        <div class="id1 card select">
             <img src="./img/1.jpg">
             <div>내용1</div>
         </div>
