[FIX] If you are moving, you can click on it to skip it.

--- a/main.html
+++ b/main.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="main.css">
     <title>Portfolio</title>
 </head>
 <body>
     <div class="body">
     </div>
+    <div class="back">
+        
+    </div>
     <div class="flex">
-        <div class="id1 card">
+        <div class="id1 card select">
             <img src="./img/1.jpg">
             <div>내용1</div>
         </div>
@@ -48,6 +51,6 @@
             <div>내용9</div>
         </div>
     </div>
-    <script src="portfolio.js"></script>
+    <script src="./src/portfolio.js"></script>
 </body>
 </html>
