--- a/main.html
+++ b/main.html
@@ -52,5 +52,6 @@
         </div>
     </div>
     <script src="./src/portfolio.js"></script>
+    <script src="./src/media.js"></script>
 </body>
 </html>
