--- a/main.html
+++ b/main.html
@@ -15,41 +15,36 @@
     </div>
     <div class="flex">
         <div class="id1 card select">
-            <img src="./img/1.jpg">
-            <div>내용1</div>
+            <div class="cardBack">
+                <div>ToDo contest</div>
+            </div>
         </div>
         <div class="id2 card">
-            <img src="./img/2.jpg">
-            <div>내용2</div>
+            <div class="cardBack">
+                <div>modori</div>
+            </div>
         </div> 
         <div class="id3 card">
-            <img src="./img/3.jpg">
-            <div>내용3</div>
+            <div class="cardBack">
+                <div>poopgame</div>
+            </div>
         </div> 
         <div class="id4 card">
-            <img src="./img/4.jpg">
-            <div>내용4</div>
+            <div class="cardBack">
+                <div>worm game</div>
+            </div>
         </div> 
         <div class="id5 card">
-            <img src="./img/5.jpg">
-            <div>내용5</div>
+            <div class="cardBack">
+                <div>ball-game</div>
+            </div>
         </div> 
         <div class="id6 card width">
-            <img src="./img/6.jpg">
-            <div>내용6</div>
+            <div class="cardBack">
+                <div>cool_js_ani</div>
+            </div>
         </div>
-        <div class="id7 card width">
-            <img src="./img/5.jpg">
-            <div>내용7</div>
-        </div>
-        <div class="id8 card width">
-            <img src="./img/5.jpg">
-            <div>내용8</div>
-        </div>
-        <div class="id9 card width">
-            <img src="./img/5.jpg">
-            <div>내용9</div>
-        </div>
+
     </div>
     <script src="./src/portfolio.js"></script>
     <script src="./src/media.js"></script>
