--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="index.css">
     <title>Portfolio</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
         </div>
         <div class="id2 card">
             <div class="cardBack">
-                <div>modori</div>
+                <div>NARARA</div>
             </div>
         </div> 
         <div class="id3 card">
